--- a/public/stylesheets/depot.css
+++ b/public/stylesheets/depot.css
@@ -155,3 +155,8 @@
   color: #8c8;
   font-size: small;
 }
+
+/* need the buttons to add items to carts to appear inline */
+#store .entry form, #store .entry form div {
+  display: inline;
+}
