--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,6 +1,18 @@
-<h2>Your Wonderful Pragmatic-ish Cart</h2>
-<ul>
+<div class="cart_title">Your Wonderful Cart</div>
+<table>
   <% @cart.line_items.each do |item| %>
-    <li><%= item.product.title %></li>
+    <tr>
+      <td><%= item.quantity %> &times; </td>
+      <td><%= item.product.title %></td>
+      <td class="item_price"><%= number_to_currency(item.total_price) %></td>
+    </tr>
   <% end %>
-</ul>
+  
+  <tr class="total_line">
+    <td colspan="2" class="total_label">Total:</td>
+    <td class="total_cell"><%= number_to_currency(@cart.total_price) %></td>
+  </tr>
+</table>
+
+
+<%= button_to "Empty Cart", @cart, :method => :delete, :confirm => "Are you sure? All items in your cart will go g'byebye!" %>
