about to add ajax stuffs

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -11,14 +11,7 @@
   </div>
 <% end %>
 <table>
-  <% @cart.line_items.each do |item| %>
-    <tr>
-      <td><%= item.quantity %> &times; </td>
-      <td><%= item.product.title %></td>
-      <td class="item_price"><%= number_to_currency(item.total_price) %></td>
-      <td><%= button_to "Remove", {:controller => 'line_items', :action => 'destroy', :id => item.id } ,{:method => :delete, :confirm => "Really? I mean, really?"}%></td>
-    </tr>
-  <% end %>
+  <%= render(@cart.line_items) %>
   
   <tr class="total_line">
     <td colspan="2" class="total_label">Total:</td>
