--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,9 @@
   </div>
   <div id="columns">
     <div id="side">
+      <div id="cart">
+        <%= render @cart unless @cart.nil? %>
+      </div>
       <a href="http://www....">Home</a><br/>
       <a href="http://www..../faq">Questions</a><br/>
       <a href="http://www..../news">News</a><br/>
