fixed up the showing/hiding of the cart

--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -9,4 +9,4 @@
   
 </table>
 
-<%= button_to "Empty Cart", cart, :method => :delete, :confirm => "Empty your cart? Say it ain't so!" %>
+<%= button_to "Empty Cart", cart, :method => :delete, :remote => true, :confirm => "Empty your cart? Say it ain't so!" %>
