finished authentication chapter, no on I18N

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
       <a href="http://www..../faq">Questions</a><br/>
       <a href="http://www..../news">News</a><br/>
       <a href="http://www..../contact">Contact</a><br/>
+      <%= render :template => "layouts/admin_controls" %>
       <br/>
       <span id="time">Retrieved at: <%= Time.now.strftime("%H:%M %D") %></span>
     </div>
