--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -1,4 +1,4 @@
-<div class="cart_title">Your Cart</div>
+<div class="cart_title"><%= t(".title") %></div>
 <table>
   <%= render(cart.line_items) %>
   
@@ -9,5 +9,5 @@
   
 </table>
 
-<%= button_to "Checkout", new_order_url, :method => :get %>
-<%= button_to "Empty Cart", cart, :method => :delete, :remote => true, :confirm => "Empty your cart? Say it ain't so!" %>
+<%= button_to t(".checkout"), new_order_url, :method => :get %>
+<%= button_to t(".empty_cart"), cart, :method => :delete, :remote => true, :confirm => t(".confirm") %>
